INGRESS/Ingress_Frontend-1111.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontendpod-1111
  annotations:
    load-balance: random
spec:
  ingressClassName: haproxy
  rules:
  - host: "haprx1.lab.byte13.org"
    http:
      paths:
      - path: /frontend-1111
        pathType: Prefix
        backend:
          service:
            name: service-alpine-k8s-tools-1111 
            port:
              number: 1111
