INGRESS/Ingress_Frontend-1111_With-enterprise-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontendpod-1111
  annotations:
    load-balance: random
    allow-list: "10.13.3.100/24, 10.1.2.0/24"
spec:
  ingressClassName: haproxy
  tls:
  - secretName: haprx1-cert
    hosts:
    - "haprx1.lab.byte13.org"
  rules:
  - host: "haprx1.lab.byte13.org"
    http:
      paths:
      - path: /frontend-1111
        pathType: Prefix
        backend:
          service:
            name: service-alpine-k8s-tools-1111 
            port:
              number: 1111
