INGRESS/Ingress_Frontend-3333_With-allow-list.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontendpod-3333
  annotations:
    load-balance: random
    haproxy.org/allow-list: "10.13.3.2/32,10.1.2.0/24"
spec:
  ingressClassName: haproxy
  rules:
  - host: "haprx1.lab.byte13.org"
    http:
      paths:
      - path: /frontend-3333
        pathType: Prefix
        backend:
          service:
            name: service-alpine-k8s-tools-3333 
            port:
              number: 3333
